<resources>
    <string name="app_name">Summoners GG</string>
    <string name="no_internet_alert">Network not connected</string>
    <string name="no_internet_sub">This can be caused because your device isn\'t connected to any network.\nplease check this before try again</string>
    <string name="no_internet_tryAgain">Try to reconnect</string>

    <string name="StatusBarHome">Find a Summoner</string>

    <string name="settings_tittle">Settings</string>

    <string name="confRegionSumary">Default region to show</string>

    <string name="findButon">Find</string>
    <string name="noregion">No region selected</string>
    <string name="noSummoner">Please write a correct summoner name</string>
    <string name="summoner">Summoner</string>


    <string name="infoSupportBar">APP Info</string>
    <string name="infotext">"Summoners GG was developed by Jorge Jerez          Using Summoners GG you are accepting <a href="https://www.riotgames.com/en/legal">Riot Games Policies</a>.          Summoners GG uses Taylor Caldwell Java wrapper for Riot Games API you can find on <a href="https://github.com/taycaldwell/riot-api-java">GitHub</a>.          Summoners GG uses Daniel Morales Toasty Libraries, which uses Facebook and Pranav Raj Singh Chauhan libraries. You can find Toasty <a href="https://github.com/GrenderG/Toasty">here</a>.          Summoners GG is totally free and open source, you can find the code <a href="https://github.com/Jorege98/SummonersGG">here</a>.           © 2019 Jorge Jerez     "</string>
    <string name="error500">Internal Server Error, please try it latter</string>
    <string name="error503">Riot API Service is unaviable right now</string>
    <string name="error404">Summoner not found</string>
    <string name="error429">You exceeded the limit of request per minut</string>
    <string name="badName">Invalid Summoner Name</string>

<<<<<<< HEAD
    <string name="flex" translatable="false">5vs5 Flex</string>
    <string name="soloq" translatable="false">Solo Q</string>
    <string name="tt" translatable="false">3vs3</string>
    <string name="level">Level:</string>

    <string name="unranked" translatable="false">Unranked</string>
    <string name="iron">Iron</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="plat">Platinum</string>
    <string name="dia">Diamond</string>
    <string name="master">Master</string>
    <string name="grandma">Grandmaster</string>
    <string name="challenger">Challenger</string>

=======
>>>>>>> master

</resources>
